Fixed spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -176,3 +176,9 @@ hr {
     margin: auto;
   }
 }
+
+@media screen and (max-width: 600px) {
+  #dispo {
+    margin-top: 75px;
+  }
+}
